--- a/src/components/TimeTracker.scss
+++ b/src/components/TimeTracker.scss
@@ -1,9 +1,14 @@
 main {
-    max-width: 300px;
+    max-width: 500px;
     margin: 0 auto;
     padding: 1em;
+    text-align: center;
 
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     background-color: var(--background-color);
     border-radius: 1em;
+    
+    .time {
+        font-size: 7em;
+    }
 }
